--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="message">File upload in progress...please wait.</string>
     <string name="audio_title">Audio Player</string>
     <string name="video_player">Video Player</string>
+    <string name="back_not_allowed">You cannot go back beyond two times</string>
 </resources>
